<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title= "@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/inventario"
            android:title="@string/menu_inventario" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/reportes"
            android:title="@string/reporte" />
    </group>

</menu>